--- a/index.css
+++ b/index.css
@@ -143,7 +143,9 @@ li a {
 /**************************************** */
 
 
-
+#photo {
+    justify-content: center;
+}
 
 #photo>img {
     inline-size: 80%;
@@ -247,6 +249,7 @@ li:hover {
 
 li:hover a {
     color: white;
+    cursor:pointer;
 }
 
 
@@ -258,11 +261,12 @@ li:hover a {
         justify-content: flex-start;
         padding-inline: 2rem;
         padding-right: 4rem;
-        background-color: bisque;
     }
 
     #photo {
         width: 40%;
+        justify-content: unset;
+
     }
 
     .name-cont {
